SecurityServiceImplTest